<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">LIconify</string>
    <string name="app_moto">Customize Boring Android UI</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="step_number">Step %1$d/%2$d</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Iconify supports all Pixel and AOSP ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all Pixel and AOSP-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for iconify to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="compatible_root_not_found_desc">Use any popular root solutions to proceed.</string>
    <string name="root_not_found_title">Root Is Not Accessible</string>
    <string name="root_not_found_desc">Looks like your device is not rooted!</string>
    <string name="need_reboot_title">Need Device Reboot</string>
    <string name="need_reboot_desc">Reboot your device to put all files in place.</string>
    <string name="installation_failed_title">Oops Did Not Expect That</string>
    <string name="installation_failed_desc">Logs have been saved in documents folder.</string>
    <string name="logs">Logs</string>
    <string name="search_title">Search</string>
    <string name="searchpreference_search">Search…</string>
    <string name="searchpreference_clear">Clear</string>
    <string name="searchpreference_history_entry">History entry</string>
    <string name="searchpreference_more">More</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_result">No result</string>
    <string name="activity_title_home_page">LIconify</string>
    <string name="activity_title_icon_pack">Icon Pack</string>
    <string name="activity_desc_icon_pack">Change system icon pack</string>
    <string name="activity_title_cellular_icons">Cellular Icons</string>
    <string name="activity_desc_cellular_icons">Change system cellular icons</string>
    <string name="activity_title_wifi_icons">WiFi Icons</string>
    <string name="activity_desc_wifi_icons">Change system WiFi icons</string>
    <string name="activity_title_brightness_bar">Brightness Bar</string>
    <string name="activity_desc_brightness_bar">Customize progress slider</string>
    <string name="activity_title_qs_shape">QS Panel Tiles</string>
    <string name="activity_desc_qs_shape">Customize QS panel tiles</string>
    <string name="activity_title_notification">Notification</string>
    <string name="activity_desc_notification">Customize notification style</string>
    <string name="activity_title_progress_bar">Progress Bar</string>
    <string name="activity_desc_progress_bar">Use different progress style</string>
    <string name="activity_title_switch">Switch</string>
    <string name="activity_desc_switch">Customize switch appearance</string>
    <string name="activity_title_toast_frame">Toast Frame</string>
    <string name="activity_desc_toast_frame">Change toast notification style</string>
    <string name="activity_title_icon_shape">Icon Shape</string>
    <string name="activity_desc_icon_shape">Change system icon shapes</string>
    <string name="iconify_updated_title">Iconify Just Got Updated!</string>
    <string name="iconify_updated_desc">Reboot your phone to use the latest added features and options.</string>
    <string name="home_card_title">Design It Your Way</string>
    <string name="home_card_subtitle">Unleash Your Imagination, Make It Yours</string>
    <string name="home_card_hide">Hide</string>
    <string name="activity_title_color_engine">Color Engine</string>
    <string name="activity_desc_color_engine">Have control over colors</string>
    <string name="activity_title_ui_roundness">UI Roundness</string>
    <string name="activity_desc_ui_roundness">Change corner radius of interface</string>
    <string name="activity_title_qs_row_column">Row and Column</string>
    <string name="activity_desc_qs_row_column">Change Qs tile rows and columns</string>
    <string name="activity_title_qs_icon_label">Icon and Label</string>
    <string name="activity_desc_qs_icon_label">Change icon and label options</string>
    <string name="activity_title_qs_tile_size">QS Tile Size</string>
    <string name="activity_desc_qs_tile_size">Change height of QS panel tile</string>
    <string name="activity_title_qs_panel_margin">QS Panel Margin</string>
    <string name="activity_desc_qs_panel_margin">Modify quick settings margins</string>
    <string name="activity_title_statusbar">Statusbar</string>
    <string name="activity_desc_statusbar">Modify statusbar interface</string>
    <string name="activity_title_navigation_bar">Navigation Bar</string>
    <string name="activity_desc_navigation_bar">Tweak navigation options</string>
    <string name="activity_title_volume_panel">Volume Panel</string>
    <string name="activity_desc_volume_panel">Customize volume panel design</string>
    <string name="activity_title_media_player">Media Player</string>
    <string name="activity_desc_media_player">Change how media player looks</string>
    <string name="activity_title_miscellaneous">Miscellaneous</string>
    <string name="activity_desc_miscellaneous">Miscellaneous customization</string>
    <string name="activity_title_xposed_menu">Xposed Menu</string>
    <string name="activity_desc_xposed_menu">LSPosed required for these options</string>
    <string name="activity_title_extras">Extras</string>
    <string name="activity_desc_extras">Additional tweaks and options</string>
    <string name="activity_title_dual_statusbar">Dual Statusbar</string>
    <string name="settings_section_title_general">General</string>
    <string name="settings_app_language">Language</string>
    <string name="settings_app_icon">App Icon</string>
    <string name="settings_app_icon_default">Default Icon</string>
    <string name="settings_app_icon_themed">Themed Icon</string>
    <string name="settings_app_icon_retro">Retro Icon</string>
    <string name="settings_app_theme">App Theme</string>
    <string name="settings_app_theme_light">Light Theme</string>
    <string name="settings_app_theme_dark">Dark Theme</string>
    <string name="settings_app_theme_system">Follow System</string>
    <string name="settings_section_title_update">Update</string>
    <string name="settings_check_for_update">Check For Update</string>
    <string name="settings_current_version">Current version: %s</string>
    <string name="settings_auto_update_title">Auto Update</string>
    <string name="activity_title_colored_battery">Colored Battery</string>
    <string name="activity_desc_colored_battery">Change battery icon color</string>
    <string name="activity_title_quick_settings">Quick Settings</string>
    <string name="activity_desc_quick_settings">Tweaks related to QS panel</string>
    <string name="activity_title_lockscreen">Lockscreen</string>
    <string name="activity_desc_lockscreen">Customize lockscreen appearance</string>
    <string name="activity_title_battery_style">Battery Style</string>
    <string name="activity_desc_battery_style">Customize battery icon view</string>
    <string name="activity_title_lockscreen_clock">Lockscreen Clock</string>
    <string name="activity_desc_lockscreen_clock">Add custom clock on lockscreen</string>
    <string name="activity_title_lockscreen_weather">Lockscreen Weather</string>
    <string name="activity_desc_lockscreen_weather">Add weather on lockscreen</string>
    <string name="activity_title_lockscreen_widget">Lockscreen Widgets</string>
    <string name="activity_desc_lockscreen_widget">Add widgets on lockscreen</string>
    <string name="activity_title_depth_wallpaper">Depth Wallpaper</string>
    <string name="activity_desc_depth_wallpaper">Show iOS like depth wallpaper</string>
    <string name="activity_title_background_chip">Background Chip</string>
    <string name="activity_desc_background_chip">Add colored chip behind clock</string>
    <string name="activity_title_xposed_others">Others</string>
    <string name="activity_desc_xposed_others">Miscellaneous xposed tweaks</string>
    <string name="activity_title_xposed_launcher">Launcher</string>
    <string name="activity_desc_xposed_launcher">Launcher related modifications</string>
    <string name="activity_title_lockscreen_album_art">Media Album Art</string>
    <string name="oneplus_qs_header_title">Oneplus QS Header</string>
    <string name="oneplus_qs_header_vibrate_title">Haptic Feedback</string>
    <string name="oneplus_qs_header_vibrate_desc">Add haptic feedback on tiles</string>
    <string name="oneplus_qs_header_show_artwork_title">Show Artwork</string>
    <string name="oneplus_qs_header_show_artwork_desc">Show album art of the playing media</string>
    <string name="oneplus_qs_header_blur_level">Blur Level</string>
    <string name="oneplus_qs_header_top_margin">Top Margin</string>
    <string name="oneplus_qs_header_expansion_y">Expansion Amount</string>
    <string name="oneplus_qs_header_gap">Expanded Gap</string>
    <string name="hide_qs_on_lockscreen_title">Hide QS on Lockscreen</string>
    <string name="hide_qs_on_lockscreen_desc">Disable quick settings panel on secured lockscreen</string>
    <string name="hide_ls_carrier_title">Hide LS Carrier</string>
    <string name="hide_ls_carrier_desc">Hide carrier name on lockscreen</string>
    <string name="hide_ls_statusbar_title">Hide LS Statusbar</string>
    <string name="hide_ls_statusbar_desc">Hide statusbar on lockscreen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="hide_ls_lock_icon_title">Hide LS Lock Icon</string>
    <string name="hide_ls_lock_icon_desc">Hide lock icon view on lockscreen</string>
    <string name="ls_wallpaper_blur_title">Wallpaper Blur</string>
    <string name="ls_wallpaper_blur_desc">Apply blur effect on lockscreen</string>
    <string name="ls_wallpaper_blur_radius_title">Wallpaper Blur Intensity</string>
    <string name="custom_tiles_footer_info">To ensure custom tiles work properly, first use the default internet and bluetooth tiles once before using the custom ones.</string>
    <string name="media_art_title">Show Media Album Art</string>
    <string name="media_art_summary">Display media album art when available</string>
    <string name="media_art_blur_level_title">Blur Level</string>
    <string name="albumart_filter_title">Media Album Art Filter</string>
</resources>