<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/com.hayao0819.liconify.ui.preferences.preferencesearch">

    <com.hayao0819.liconify.ui.preferences.HookCheckPreference
        android:key="xposedHookCheck"
        android:layout="@layout/view_xposed_hook_check"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        search:ignore="true" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_background_chip"
        android:key="xposedBackgroundChip"
        android:summary="@string/activity_desc_background_chip"
        android:title="@string/activity_title_background_chip"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.BackgroundChip" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_colored_battery"
        android:key="xposedBatteryStyle"
        android:summary="@string/activity_desc_battery_style"
        android:title="@string/activity_title_battery_style"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.BatteryStyle" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_quick_settings"
        android:key="xposedQuickSettings"
        android:summary="@string/activity_desc_quick_settings"
        android:title="@string/activity_title_quick_settings"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.QuickSettings" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_lockscreen"
        android:key="xposedLockscreen"
        android:summary="@string/activity_desc_lockscreen"
        android:title="@string/activity_title_lockscreen"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.Lockscreen" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_tweaks_statusbar"
        android:key="xposedStatusbar"
        android:summary="@string/activity_desc_statusbar"
        android:title="@string/activity_title_statusbar"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.Statusbar" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_tweaks_volume"
        android:key="xposedVolumePanel"
        android:summary="@string/activity_desc_volume_panel"
        android:title="@string/activity_title_volume_panel"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.VolumePanelParent" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_launcher"
        android:key="xposedLauncher"
        android:summary="@string/activity_desc_xposed_launcher"
        android:title="@string/activity_title_xposed_launcher"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.Launcher" />

    <com.hayao0819.liconify.ui.preferences.PreferenceMenu
        android:icon="@drawable/ic_xposed_misc"
        android:key="xposedOthers"
        android:summary="@string/activity_desc_xposed_others"
        android:title="@string/activity_title_xposed_others"
        app:fragment="com.hayao0819.liconify.ui.fragments.xposed.Others" />

</PreferenceScreen>